--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Xuxa</title>
+    <title>Imouto</title>
 
     <!-- Fonts -->
 
@@ -73,7 +73,7 @@
         <i class="fa-brands fa-twitter m-2"></i>
       </div>
       <br>
-      <strong>Copyright &copy; 2022-2023 <a href="/">Xuxa.io</a>.</strong>
+      <strong>Copyright &copy; 2022-2023 <a href="/">Imouto.io</a>.</strong>
       All rights reserved.
       <div class="float-right d-none d-sm-inline-block">
         <b>Version</b> 1.0.0
